# intership1-marking-consulting

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
docs/: methodology.md
examples/: imf_brief.yaml  sample_comments.json
src/mrw/: __init__.py  cli.py  llm.py  pipeline.py
src/mrw/stages/: __init__.py  brief_parser.py  data_collector.py  framework_analyzer.py  report_generator.py  triple_validator.py
tests/: test_brief_parser.py  test_framework_analyzer.py  test_triple_validator.py
